tested react in index.jsx, fails on module build

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -8,6 +8,7 @@
         <title>Learn React</title>
     </head>
     <body>
+        <div id="content"></div>
         <script type="text/javascript" src="js/bundle.js"></script>
     </body>
 </html>
