state and life cycle

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -8,7 +8,7 @@
         <title>Learn React</title>
     </head>
     <body>
-        <div id="content"></div>
+        <div id="root"></div>
         <script type="text/javascript" src="js/bundle.js"></script>
     </body>
 </html>
